better lua/orm integration
